add - tinylytics tracking and basic page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
     {% feed_meta %}
     {% seo %}
+
+    <!-- Tinylytics -->
+    <script src="https://tinylytics.app/embed/7ZMWAxo3SGfyS79F-9JM.js" defer></script>
   </head>
   <body>
     {% include header.html %}
