update - post appearance and 2024 post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
     <a href="{{ "/" | relative_url }}" class="header-logo" title="{{ site.title }}">
       <img src="{{ "/assets/imgs/system3_logo_transparent_black.png" | relative_url }}" alt="{{ site.title }} Logo" />
     </a>
-    <h1 class="site-title">{{ site.title }}</h1>
+    <a href="{{ "/" | relative_url }}" class="header-logo-text">
+      <h1 class="site-title">{{ site.title }}</h1>
+    </a>
   </div>
   
   <!-- Mobile menu button -->
