--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,6 +188,7 @@ a:hover {
 .site-title {
   font-size: 1.25rem;
   font-weight: 700;
+  padding-top: 10px;
 }
 
 .header-right {
@@ -322,6 +323,11 @@ a:hover {
   margin-right: 1rem;
 }
 
+/* Posts */
+.post {
+  padding-top: 6rem; /* Adjust based on your header height */
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .main-content, 
@@ -405,6 +411,12 @@ a:hover {
 
   .footer-description {
     display: none;
+  }
+
+  .post {
+    padding-top: 6rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
 
