add - footer clock // update - css padding fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,8 +28,9 @@
   
   <div class="footer-bottom">
     <div class="footer-bottom-column">
-      <h4>LOCATION</h4>
+      <p>Available everywhere, currently in:</p>
       <p>Berlin, Germany</p>
+      <p id="berlin-time">Loading time...</p>
     </div>
     
     <div class="footer-bottom-column">
